# CellGov

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README.md  bench.sh  codecov.yml
apps/cellgov_cli/: Cargo.toml
apps/cellgov_cli/src/: compare_cmds.rs  disasm.rs  dump_imports.rs  dump_prx_imports.rs  funcs.rs  game.rs  main.rs
apps/cellgov_cli/src/cli/: args.rs  boot_cmd.rs  cli_arg_error.rs  compare.rs  dump.rs  env.rs  exit.rs  explore.rs  fixture_gen.rs  mod.rs  rpcs3_attribute.rs  scenarios.rs  title.rs  titles_gen.rs
apps/cellgov_cli/src/disasm/: args.rs  elf.rs  entry.rs  mod.rs  stream.rs  test_support.rs
apps/cellgov_cli/src/game/: bench.rs  boot.rs  content.rs  diag.rs  manifest.rs  mod.rs  mounts.rs  observation.rs  prescan_format.rs  prx.rs  ps3_layout.rs  run.rs  stack_walk.rs  step_loop.rs  titles.rs
apps/cellgov_cli/src/tests/: dump_prx_imports_tests.rs  funcs_tests.rs  main_tests.rs
apps/cellgov_cli/tests/: authority_id_revert_tripwire.rs  callback_dispatch_e2e.rs  cellsysutil_stall_signature_tripwire.rs  compare_observations_tripwire.rs  diverge_fixtures.rs  firmware_reloc_census.rs  firmware_set_load.rs  foundation_title_witnesses_tripwire.rs  ps3autotests.rs  snapshot_effects_tripwire.rs
apps/cellgov_firmware/: Cargo.toml
apps/cellgov_firmware/oracle/: rap_to_klic_oracle.py
apps/cellgov_firmware/src/: crypto.rs  lib.rs  main.rs  manifest.rs  npdrm.rs  pup.rs  sce.rs  tar.rs
apps/cellgov_firmware/src/sce/: decrypt.rs  elf.rs  error.rs  mod.rs  raw.rs
apps/cellgov_firmware/src/tests/: crypto_tests.rs  lib_tests.rs  main_tests.rs  manifest_tests.rs  npdrm_tests.rs  pup_tests.rs  tar_tests.rs
apps/cellgov_firmware/tests/: firmware_pipeline_end_to_end.rs  parity_decrypted_reference.rs  parity_oracles.toml
bridges/rpcs3_to_observation/: Cargo.toml
bridges/rpcs3_to_observation/src/: main.rs
bridges/rpcs3_to_observation/src/tests/: main_tests.rs
bridges/rpcs3_to_observation/tests/: end_to_end.rs
crates/cellgov_compare/: Cargo.toml
crates/cellgov_compare/benches/: diverge_bench.rs
crates/cellgov_compare/src/: baseline.rs  boot_summary.rs  classify.rs  compare.rs  diverge.rs  format.rs  lib.rs  manifest.rs  observation.rs  observation_compare.rs  report.rs  runner_cellgov.rs  runner_rpcs3.rs  summary.rs  sync_primitive_scan.rs  test_support.rs
crates/cellgov_compare/src/compare/: driver.rs  events.rs  memory.rs  mod.rs  types.rs
crates/cellgov_compare/src/diverge/: mod.rs  scan.rs  zoom.rs
crates/cellgov_compare/src/manifest/: fields.rs  loader.rs  mod.rs  model.rs  sections.rs
crates/cellgov_compare/src/observation/: event.rs  hashes.rs  memory.rs  mod.rs  model.rs  outcome.rs
crates/cellgov_compare/src/report/: human.rs  json.rs  labels.rs  mod.rs
crates/cellgov_compare/src/runner_cellgov/: boot.rs  mod.rs  region.rs  scenario.rs
crates/cellgov_compare/src/runner_rpcs3/: config.rs  dump.rs  error.rs  invoke.rs  mod.rs  observe.rs  tty.rs
crates/cellgov_compare/src/tests/: baseline_tests.rs  boot_summary_tests.rs  classify_tests.rs  format_tests.rs  manifest_tests.rs  observation_compare_tests.rs  summary_tests.rs  sync_primitive_scan_tests.rs
crates/cellgov_compare/templates/: compare_report.txt.template
crates/cellgov_core/: Cargo.toml
crates/cellgov_core/benches/: core_bench.rs
crates/cellgov_core/src/: commit.rs  hle.rs  hle_context.rs  hle_gcm.rs  hle_sys.rs  lib.rs  registry.rs  rsx.rs  rsx_advance.rs  runtime.rs  scheduler.rs  syscall_table.rs
crates/cellgov_core/src/hle/: cellGcmSys.rs  cellSaveData.rs  cellSpurs.rs  cellSysutil.rs  context.rs  gcm.rs  mod.rs  sys.rs  sysPrxForUser.rs  (+1 more)
crates/cellgov_dma/: Cargo.toml
crates/cellgov_dma/src/: completion.rs  latency.rs  lib.rs  queue.rs  request.rs
crates/cellgov_effects/: Cargo.toml
crates/cellgov_effects/src/: effect.rs  lib.rs  payload.rs
crates/cellgov_exec/: Cargo.toml
crates/cellgov_exec/src/: context.rs  fake_isa.rs  lib.rs  step_result.rs  unit.rs  yield_reason.rs
crates/cellgov_explore/: Cargo.toml
crates/cellgov_explore/src/: classify.rs  config.rs  decision.rs  dependency.rs  explore.rs  explorer.rs  lib.rs  observer.rs  oracle.rs  prescribed.rs  report.rs  util.rs
crates/cellgov_explore/tests/: regression.rs  snapshot_equivalence.rs
crates/cellgov_lv2/: Cargo.toml
crates/cellgov_lv2/src/: dispatch.rs  errno.rs  fs.rs  fs_store.rs  host.rs  image.rs  lib.rs  ppu_thread.rs  prx_registry.rs  request.rs  sync_primitives.rs  syscall_classification.rs  thread_group.rs
crates/cellgov_lv2/tests/: errno_db.rs
crates/cellgov_mem/: Cargo.toml
crates/cellgov_mem/benches/: mem_bench.rs
crates/cellgov_mem/examples/: reset_vs_calloc.rs
crates/cellgov_mem/src/: addr.rs  be.rs  guest.rs  hash.rs  lib.rs  local_store.rs  range.rs  staging.rs  store_watch.rs  value_sample.rs
crates/cellgov_ppu/: Cargo.toml
crates/cellgov_ppu/benches/: ppu_bench.rs
crates/cellgov_ppu/examples/: parse_rpcs3_trace.rs  replay_rpcs3_trace.rs
crates/cellgov_ppu/src/: decode.rs  exec.rs  exec_vec.rs  fp.rs  funcmap.rs  hle_watch.rs  instruction.rs  lib.rs  loader.rs  nid_db.rs  prx.rs  shadow.rs  sprx.rs  state.rs  store_buffer.rs  syscall.rs  tests.rs
crates/cellgov_ppu/tests/: hle_layout.rs  reloc_addr16_lo_ds.rs  reloc_addr64.rs  reloc_rel24.rs  snapshot_shadow_independence.rs  sprx_error_coverage.rs
crates/cellgov_spu/: Cargo.toml
crates/cellgov_spu/src/: channels.rs  decode.rs  exec.rs  instruction.rs  lib.rs  loader.rs  state.rs  tests.rs
crates/cellgov_sync/: Cargo.toml
crates/cellgov_sync/src/: barrier.rs  lib.rs  mailbox.rs  mailbox_registry.rs  registry.rs  reservation.rs  signal.rs  signal_registry.rs
crates/cellgov_testkit/: Cargo.toml
crates/cellgov_testkit/src/: assertions.rs  fixtures.rs  golden.rs  lib.rs  runner.rs  world.rs
crates/cellgov_testkit/tests/: test_layout_guard.rs
crates/cellgov_time/: Cargo.toml
crates/cellgov_time/src/: budget.rs  epoch.rs  lib.rs  ticks.rs
crates/cellgov_trace/: Cargo.toml
crates/cellgov_trace/src/: hash.rs  level.rs  lib.rs  reader.rs  record.rs  writer.rs
(+634 files in other folders)
