[package]
name = "cellgov_cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cellgov_compare = { path = "../../crates/cellgov_compare" }
cellgov_testkit = { path = "../../crates/cellgov_testkit" }
cellgov_trace = { path = "../../crates/cellgov_trace" }
serde_json = "1"
