[package]
name = "cellgov_firmware"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "cellgov_firmware"
path = "src/lib.rs"

[[bin]]
name = "cellgov_firmware"
path = "src/main.rs"

[dependencies]
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints]
workspace = true
