[package]
name = "cellgov_firmware"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "cellgov_firmware"
path = "src/lib.rs"

[[bin]]
name = "cellgov_firmware"
path = "src/main.rs"

[dependencies]
cellgov_ps3_abi = { path = "../../crates/cellgov_ps3_abi" }
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"

[features]
# Enable the npdrm oracle vector tests that include_bytes!() the
# operator-supplied RAP files under
# tools/rpcs3/dev_hdd0/home/00000001/exdata/. Off by default so a
# fresh checkout without those license files compiles cleanly; CI
# enables it on the host that carries the RAPs to run the
# 16-byte-boundary regression anchors. The rap_to_klic_is_pure
# test (no fixture dependency) stays unconditional.
npdrm-oracle-vectors = []

[lints]
workspace = true
