[package]
name = "rpcs3_to_observation"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cellgov_compare = { path = "../../crates/cellgov_compare" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
cellgov_trace = { path = "../../crates/cellgov_trace" }
