[package]
name = "cellgov_compare"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cellgov_event = { path = "../cellgov_event" }
cellgov_testkit = { path = "../cellgov_testkit" }
cellgov_trace = { path = "../cellgov_trace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
