[package]
name = "cellgov_dma"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cellgov_time = { path = "../cellgov_time" }
cellgov_mem = { path = "../cellgov_mem" }
cellgov_event = { path = "../cellgov_event" }
