[package]
name = "cellgov_mem"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cellgov_time = { path = "../cellgov_time" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "mem_bench"
harness = false
