[package]
name = "cellgov_testkit"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cellgov_core = { path = "../cellgov_core" }
cellgov_dma = { path = "../cellgov_dma" }
cellgov_effects = { path = "../cellgov_effects" }
cellgov_event = { path = "../cellgov_event" }
cellgov_exec = { path = "../cellgov_exec" }
cellgov_mem = { path = "../cellgov_mem" }
cellgov_sync = { path = "../cellgov_sync" }
cellgov_time = { path = "../cellgov_time" }
cellgov_trace = { path = "../cellgov_trace" }
