[package]
name = "cellgov_time"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cellgov_ps3_abi = { path = "../cellgov_ps3_abi" }
serde = { version = "1", features = ["derive"] }
derive_more = { version = "2", default-features = false, features = ["display"] }
